H2DataBaseの設定変更及びDDL文の追加

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=OfficeSmile
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:officesmile;DB_CLOSE_ON_EXIT=FALSE;MODE=PostgreSQL;DATABASE_TO_UPPER=false
+spring.datasource.username=officesmile
+spring.datasource.password=officesmile
+spring.datasource.generate-unique-name=false
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:schema.sql
