officesmile.domain配下のログレベルをDEBUGに変更

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=officesmile
 spring.datasource.generate-unique-name=false
 spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath:schema.sql
+logging.level.com.example.officesmile.domain=DEBUG
