--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter-test</artifactId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>3.0.3</version>
-			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
 		</dependency>
 
 		<dependency>
